# AgentSmith

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-04-18-agentsmith-v2-phase1-skeleton.md
docs/superpowers/specs/: 2026-04-18-agentsmith-dag-scenario-engine-design.md
src/agent_smith/: __main__.py  controller.py  events.py  main.py
src/agent_smith/agent_runner/: bridge.py  event_writer.py  runner.py
src/agent_smith/auth/: dependencies.py  jwt.py  models.py  passwords.py  seed.py
src/agent_smith/control/: crypto.py  recovery.py  registry.py  report.py  spawner.py
src/agent_smith/core/: agent.py  config.py  evidence.py  mission.py
src/agent_smith/event_stream/: bus.py  persistence.py  types.py
src/agent_smith/evidence/: __init__.py  facts.py  matcher.py  store.py
src/agent_smith/executor/: executor.py  shell.py
src/agent_smith/graph/: mission_graph.py  scheduler.py  task.py
src/agent_smith/llm/: base.py  claude.py  factory.py  (+2 more)
tests/: test_agent.py  test_auth.py  test_evidence.py  test_llm.py  test_tools.py
tests/agent_runner/: test_bridge.py  test_event_writer.py  test_runner.py
tests/control/: test_crypto.py  test_recovery.py  test_registry.py  test_report.py  test_spawner.py
tests/e2e/: test_compose_flow.py
tests/server/: test_mission_routes.py  test_playbooks_metadata.py  test_profile_routes.py
tests/ui_js/: event_buffer.test.mjs  event_types.test.mjs  format.test.mjs
tests/v2/: conftest.py  test_controller.py  test_routes.py
(+68 files in other folders)
