[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-smith"
version = "0.1.0"
description = "Autonomous penetration testing agent with real-time web dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncssh>=2.17.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "anthropic>=0.45.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_smith"]
